# cogniforge-ai

./: .dockerignore  .env.example  README.md  docker-compose-ai.yml  pyproject.toml  requirements.txt  start.sh
.github/workflows/: cd.yml  ci.yml
agent/: __init__.py  executor.py
app/: __init__.py  main.py  tracing.py
app/routers/: __init__.py  agent.py  llm.py  memory.py  rag.py
llm/: __init__.py  anthropic_provider.py  base.py  openai_provider.py  openrouter_provider.py
memory/: __init__.py  manager.py
services/: __init__.py
services/rag/: __init__.py  document_processor.py
services/rag/embedding/: __init__.py  base.py  local_embedder.py  openai_embedder.py
services/rag/parsers/: __init__.py  base.py  docx_parser.py  html_parser.py  pdf_parser.py  txt_parser.py
services/rag/splitters/: __init__.py  base.py  recursive_splitter.py
services/rag/vector_store/: __init__.py  base.py  pgvector_store.py
tests/: __init__.py
tools/: __init__.py  base.py  builtins.py  registry.py
