[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cogniforge-ai"
version = "1.0.0"
description = "AI service for Cogniforge - Agent, LLM, RAG, and Memory"
authors = [{name = "cogniforge"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["ai", "agent", "llm", "rag", "openai", "anthropic", "vector-search", "pgvector"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "httpx>=0.24.0",
    "pypdf>=3.0.0",
    "python-docx>=0.8.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
local-embed = ["sentence-transformers>=2.0.0"]
redis = ["redis>=5.0.0"]
